--- a/Server/Form1.resx
+++ b/Server/Form1.resx
@@ -120,4 +120,59 @@
   <metadata name="Timer1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
+  <metadata name="Timer2.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>106, 17</value>
+  </metadata>
+  <data name="RichTextBox2.Text" xml:space="preserve">
+    <value>How to Play Snakes and Ladders
+
+	Snakes and Ladders
+		A worldwide classic board game! Navigate your piece from start to finish, avoid the snakes, and take shortcuts going up the ladders. The origins of this game are found in ancient India were it was known as ‘Moksha-Patamu.' A player moving up the board represented life's spiritual journey, complicated by virtues - the ladders, and vices - the snakes.
+
+	Gameplay
+		The players will move their pieces from left to right, starting at 1, following the numbers on the board, then the next row from right to left and repeat. If a player rolls a 4, then the player would move their piece four places.
+
+	Snakes
+		When a player lands on a top of a snake, their playing piece will slide down to the bottom of the snake.
+Whereas landing on the bottom of a snake the player will remain in the same spot until their next turn.
+
+	Ladders
+		When a player lands at the base of a ladder, it immediately climbs to the top of the ladder.
+Whereas landing at the top of a ladder the player will stay there until the next turn. The player does not move to the bottom of the ladder.
+
+	Winning the Game
+		The first player that reaches the highest space on the board, 100, wins the game. To win the player will need to roll the exact number to get you to the last space. If the player rolls a higher number than needed to land exactly on 100, their piece does not move and remains there until their next turn, when they can roll again.</value>
+  </data>
+  <data name="Label8.Text" xml:space="preserve">
+    <value>He is an athletic person who has passion in the sports of basketball, baseball, 
+and table tennis. During his free time, he watches random TV Series, 
+movies, and anime with his family. He’s known for being responsible especially 
+in academics and He’s a god-fearing person, dedicated to God and loves to 
+attend church every Sunday with his family.
+
+</value>
+  </data>
+  <data name="Label11.Text" xml:space="preserve">
+    <value>He finds interest in desktop and mobile competitive gaming, as well as
+in the sport of table tennis. He spends his free time binge-watching 
+TV series, anime, and random documentaries in the internet, 
+but mostly playing with his cats. </value>
+  </data>
+  <data name="Label13.Text" xml:space="preserve">
+    <value>She is into arts and crafts, and lately she's trying watercolor portrait painting. 
+During her free time she loves to spend time with her friends playing 
+competitive desktop gaming. The best traits to describe her are being 
+optimistic, always smiling, and finds happiness even in small things.
+</value>
+  </data>
+  <data name="Label15.Text" xml:space="preserve">
+    <value>He is a multi-talented energetic person that has interest in the sports of 
+badminton, basketball, and volleyball. He is also a great singer and 
+performer that lets him triumph in some competitions inside and 
+outside of the university.
+</value>
+  </data>
+  <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>79</value>
+  </metadata>
 </root>
